--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,12 @@
-baseURL = "http://example.org/"
-languageCode = "en-us"
-title = "My New Hugo Site"
+baseurl = "https://example.com"
+title = "Hugo Theme"
+author = "@JeffProd"
+copyright = "Copyright © 2008–2018, @JeffProd"
+canonifyurls = true
+paginate = 3
+
+theme = "jeffprod"
+
+[taxonomies]
+    tag = "tags"
+    archive = "archives"
